--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,8 +42,8 @@ const sourceColors: Record<string, { bg: string; text: string }> = {
           </a>
         </div>
       </div>
-      <div class="flex-1 flex justify-center lg:justify-end">
-        <img src="/images/hero/jetson-family-line_50pcnt.png" alt="NVIDIA Jetson AI Illustration" class="max-w-[192px] md:max-w-[640px] w-auto h-auto" />
+      <div class="flex-1 flex justify-center lg:justify-end w-full">
+        <img src="/images/hero/jetson-family-line_50pcnt.png" alt="NVIDIA Jetson AI Illustration" class="w-full md:max-w-md lg:max-w-xl h-auto" />
       </div>
     </div>
   </section>
